additions to documnetation
